--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "license": "MIT",
   "scripts": {
-    "start": "ts-node ./checkSales.ts",
-    "heroku-postdeploy": "ts-node ./checkSales.ts"
+    "start": "ts-node ./sayGM.ts",
+    "heroku-postdeploy": "ts-node ./sayGM.ts"
   },
   "dependencies": {
     "@types/node": "^14.14.36",
